added social media to bottom

--- a/less/main.less
+++ b/less/main.less
@@ -121,3 +121,12 @@
   font-family: serif;
   font-size: 1.3em;
 }
+
+.phone-contact {
+  text-decoration: none;
+  list-style-type: none;
+  li {
+    display: inline;
+    margin-right: 3%;
+  }
+}
