--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -1,7 +1,10 @@
 /*!
- * Start Bootstrap - Grayscale Bootstrap Theme (http://startbootstrap.com)
- * Code licensed under the Apache License v2.0.
- * For details, see http://www.apache.org/licenses/LICENSE-2.0.
+  got the basics from
+   * Start Bootstrap - Grayscale Bootstrap Theme (http://startbootstrap.com)
+   * Code licensed under the Apache License v2.0.
+   * For details, see http://www.apache.org/licenses/LICENSE-2.0.
+
+   edited by Amr Elsekilly
  */
 
 body {
@@ -214,7 +217,7 @@ a:focus {
     -moz-animation-timing-function: linear;
 }
 
-@-webkit-keyframes pulse {    
+@-webkit-keyframes pulse {
     0 {
         -webkit-transform: scale(1);
         transform: scale(1);
@@ -231,7 +234,7 @@ a:focus {
     }
 }
 
-@-moz-keyframes pulse {    
+@-moz-keyframes pulse {
     0 {
         -moz-transform: scale(1);
         transform: scale(1);
