--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -259,7 +259,8 @@ a:focus {
     width: 100%;
     padding: 50px 0;
     color: #fff;
-    background: url(/img/downloads-bg.jpg) no-repeat center center scroll;
+    /*background: url(/img/downloads-bg.jpg) no-repeat center center scroll;*/
+
     background-color: {{ site.color.primary-dark }};
     -webkit-background-size: cover;
     -moz-background-size: cover;
