--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -17,7 +17,7 @@
                         <a href="https://eg.linkedin.com/in/amrsekilly#project-1630801385" target="_blank" class="btn btn-xs btn-success"><i class="fa fa-info"></i></a>
                       </div>
                       <div class="col-md-6 new-grid">
-                            <a href="#" class="mask">
+                            <a  class="mask">
                       <img src="img/aquaphoton.net1.png" class="img-responsive zoom-img" alt=""></a>
                       </div>
                       <div class="clearfix"></div>
@@ -25,7 +25,7 @@
 
                     <div>
                       <div class="col-md-6 new-grid">
-                            <a href="#" class="mask">
+                            <a class="mask">
                       <img src="img/android.png" class="img-responsive zoom-img" alt=""></a>
                       </div>
                       <div class="col-md-6 new-grid1">
