--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -252,12 +252,12 @@ a:focus {
 }
 
 .content-section {
-    padding-top: 100px;
+    padding-top: 0;
 }
 
 .download-section {
     width: 100%;
-    padding: 50px 0;
+    padding: 0px 0;
     color: #fff;
     /*background: url(/img/downloads-bg.jpg) no-repeat center center scroll;*/
 
