--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,6 +1,6 @@
     <!-- Download Section -->
     <section id="portfolio" class="content-section text-center">
-        <div class="download-section">
+        <div>
             <div class="container">
                 <div class="col-lg-12 new-grids" >
                     <h2>My Work</h2>
@@ -42,7 +42,52 @@
                       <div class="clearfix"></div>
                     </div>
 
-                </div>
+                    <div>
+
+                      <div class="col-md-6 new-grid1">
+                        <h5 style="color:black;">02|16 <span class="flag-icon flag-icon-us" data-toggle="tooltip" title="USA"></span></h5>
+                        <h4><a href="https://www.freelancer.com/u/amrsekilly.html">Hoverboards Responsive Website</a></h4>
+                        <p>
+                          I edited the front-end of the App for a client on <a href="http://freelancer.com">Freelancer.com</a>.
+                        </p>
+                        <p>
+                          Responsiveness was achieved by using <a href="http://getskeleton.com/">Skeleton</a>.
+                        </p>
+                        <a href="https://www.freelancer.com/u/amrsekilly.html" target="_blank" class="btn btn-xs btn-success"> <i class="fa fa-info"></i> </a>
+                      </div>
+
+                      <div class="col-md-6 new-grid">
+                            <a class="mask">
+                      <img src="img/hoverboards.png" class="img-responsive zoom-img" alt=""></a>
+                      </div>
+
+
+                      <div class="clearfix"></div>
+                    </div>
+
+                    <div>
+                      <div class="col-md-6 new-grid">
+                            <a class="mask">
+                      <img src="img/india.png" class="img-responsive zoom-img" alt=""></a>
+                      </div>
+                      <div class="col-md-6 new-grid1">
+                        <h5 style="color:black;">01|16 <span class="flag-icon flag-icon-in" data-toggle="tooltip" title="India"></span></h5>
+                        <h4><a href="https://www.freelancer.com/u/amrsekilly.html">Responsive HTML5 Website</a></h4>
+                        <p>
+                          I created the front-end of the App for a client on <a href="http://freelancer.com">Freelancer.com</a>.
+                        </p>
+                        <p>
+                          We had an <a href="https://en.wikipedia.org/wiki/Non-disclosure_agreement">NDA</a> taht's why I can't release any info about it. But I can request that from the client if you are interested to know.
+                        </p>
+                        <p>
+                          Responsiveness was achieved by using <a href="http://getbootstrap.com/">Bootstrap</a>.
+                        </p>
+                        <a href="https://www.freelancer.com/u/amrsekilly.html" target="_blank" class="btn btn-xs btn-success"> <i class="fa fa-info"></i> </a>
+                      </div>
+                      <div class="clearfix"></div>
+                    </div>
+
+                </div> <!-- / all portfolio items -->
             </div> <!-- /container -->
         </div>
     </section>
