--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -74,7 +74,7 @@
                         <h5 style="color:black;">01|16 <span class="flag-icon flag-icon-in" data-toggle="tooltip" title="India"></span></h5>
                         <h4><a href="https://www.freelancer.com/u/amrsekilly.html">Responsive HTML5 Website</a></h4>
                         <p>
-                          I created the front-end of the App for a client on <a href="http://freelancer.com">Freelancer.com</a>.
+                          I created the front-end of the website for a client on <a href="http://freelancer.com">Freelancer.com</a>.
                         </p>
                         <p>
                           We had an <a href="https://en.wikipedia.org/wiki/Non-disclosure_agreement">NDA</a> taht's why I can't release any info about it. But I can request that from the client if you are interested to know.
