--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -455,3 +455,10 @@ img.zoom-img:hover {
     font-family: 'DancingScript-Regular';
     color: #3b3772;
 }
+
+/* make buttons more user friendly */
+
+.btn {
+  margin-right: 24px;
+  margin-left: 24px;
+}
