added more content to about me

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,14 +5,57 @@
               <img src="img/amr.jpg" class="img-rounded" style="max-width:200px; margin-bottom:20px;" alt="Amr Mohamed Elsayed Abdelkhalik Elsekilly"
               data-toggle="tooltip" title="That's me :)"/>
                 <h2>What I do</h2>
-                <p>I study Electrical Engineering in <a href="#">Alexandria University, EG</a>. But mainly I'm interested in web development and I'm working on becoming a full-stack JavaScript web developer;
-                  by enrolling in <a href="#">Coursera Specializations <i class="fa fa-expand" style="color:yellow;"></i></a>, working on <a href="#">real life projects</a> as a
-                  freelancer, building projects on <a href="#">Free Code Camp</a>, and <a href="#">peer programming</a> with friends from all over the world!
+                <p>I study Electrical Engineering in <a href="https://en.wikipedia.org/wiki/Faculty_of_Engineering,_Alexandria_University">Alexandria University, EG</a>. But mainly I'm interested in web development and I'm working on becoming a full-stack JavaScript web developer;
+                  by enrolling in <a data-toggle="modal" data-target="#courseraModal">Coursera Specializations <i class="fa fa-expand" style="color:yellow;"></i></a>, working on <a href="https://www.freelancer.com/u/amrsekilly.html">real life projects</a> as a
+                  freelancer, building projects on <a href="http://www.freecodecamp.com/amrme">Free Code Camp</a>, and <a href="https://twitter.com/BrianLMayers/status/692068129497862144">peer programming</a> with friends from all over the world!
                   <br>
                   <br>
-                  P.S. I <a href="">program robots</a> that dive and discover underwater environments <i class="fa fa-tint text-primary"></i> which is pretty cool <i class="fa fa-heart" style="color:red;"></i>! <i class="fa fa-thumbs-o-up"></i>
+                  P.S. I <a href="http://aquaphoton.net/team0.html">program robots</a> that dive and discover underwater environments <i class="fa fa-tint text-primary"></i> which is pretty cool <i class="fa fa-heart" style="color:red;"></i>! <i class="fa fa-thumbs-o-up"></i>
                 </p>
 
             </div>
         </div>
     </section>
+
+
+    <!-- Coursera Modal -->
+<div class="modal fade" id="courseraModal" tabindex="-1" role="dialog" aria-labelledby="CModalTitle">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title text-center" id="CModalTitle">Coursera Specializations</h4>
+      </div>
+      <div class="modal-body">
+        <!-- content here -->
+        <i class="fa fa-square-o"></i> <a href="https://www.coursera.org/specializations/full-stack" target="_blank">Full Stack Web Development - <small>The Hong Kong University of Science and Technology</small></a>
+        <ul>
+          <li><i class="fa fa-check-square-o"></i> HTML, CSS and JavaScript -
+          <small>September 14 – October 12</small> (<a target="_blank" href="https://www.coursera.org/account/accomplishments/records/EMNALGEK5R3L">4V24PD3XW632</a>)</li>
+          <li><i class="fa fa-check-square-o"></i> Front-End Web UI Frameworks and Tools -
+          <small>October 19 – November 23</small> (<a target="_blank" href="https://www.coursera.org/account/accomplishments/records/6P9Q9L5GH9PD">E9YKZM4Y24T9</a>)</li>
+          <li><i class="fa fa-square-o"></i> Front-End JavaScript Frameworks: AngularJS</li>
+          <li><i class="fa fa-square-o"></i> Multiplatform Mobile App Development with Web Technologies</li>
+          <li><i class="fa fa-square-o"></i> Server-side Development with NodeJS</li>
+          <li><i class="fa fa-square-o"></i> Full Stack Web Development Specialization Capstone Project</li>
+        </ul>
+        <hr>
+        <i class="fa fa-square-o"></i> <a href="https://www.coursera.org/specializations/website-development" target="_blank">Responsive Website Development and Design - <small>University of London & Goldsmiths, University of London</small></a>
+        <ul>
+          <li><i class="fa fa-check-square-o"></i> Responsive Website Basics: Code with HTML, CSS, and JavaScript -
+          <small>September 14 – October 19</small> (<a target="_blank" href="https://www.coursera.org/account/accomplishments/records/YTYE7E2RLJLS">KUQBJNEQGJY6</a>)</li>
+          <li><i class="fa fa-check-square-o"></i> Responsive Web Design -
+          <small>October 20 – November 23</small> (<a target="_blank" href="https://www.coursera.org/account/accomplishments/records/7TE5WJQ694ZG">PPQFGJDPNKGM</a>)</li>
+          <li><i class="fa fa-check-square-o"></i> Introduction to Meteor.js Development -
+          <small>November 16 – December 21</small> (<a target="_blank" href="https://www.coursera.org/account/accomplishments/records/CZHBPE43RH5C">C3TVY3FAHRVW</a>)</li>
+          <li><i class="fa fa-square-o"></i> Web Application Development with JavaScript and MongoDB</li>
+          <li><i class="fa fa-square-o"></i> Responsive Website Tutorial and Examples</li>
+          <li><i class="fa fa-square-o"></i> Responsive Website Development and Design Capstone</li>
+        </ul>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
