added latest news API

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -140,6 +140,36 @@
                       <div class="clearfix"></div>
                     </div>
 
+                    <div>
+
+                      <div class="col-md-6 new-grid1">
+                        <h5 style="color:black;">02|16 <i class="fa fa-globe"></i></h5>
+                        <h4><a href="http://amrsekilly.com/camperNews/">Camper News App</a></h4>
+                        <p>
+                          I used FreeCodeCamp's latest news <a href="http://www.freecodecamp.com/news/hot">API</a>.
+                        </p>
+                        <p>
+                          I used <a href="http://jade-lang.com/">Jade</a> as an HTML preprocessor.
+                        </p>
+                        <p>
+                          <a href="http://sass-lang.com/">Sass</a> was used to write the styles.
+                        </p>
+                        <p>
+                          The app was written in JavaScript.
+                        </p>
+                        <a href="http://amrsekilly.com/camperNews/" target="_blank" class="btn btn-xs btn-info"><i class="fa fa-link"></i></a>
+                        <a href="https://github.com/amrme/camperNews" target="_blank" class="btn btn-xs btn-primary"><i class="fa fa-github"></i></a>
+                        <a href="https://twitter.com/amrsekilly/status/694425120757190656" target="_blank" class="btn btn-xs btn-success"><i class="fa fa-info"></i></a>
+                      </div>
+
+                      <div class="col-md-6 new-grid">
+                            <a class="mask">
+                      <img src="img/camper.png" class="img-responsive zoom-img" alt=""></a>
+                      </div>
+
+                      <div class="clearfix"></div>
+                    </div>
+
                 </div> <!-- / all portfolio items -->
             </div> <!-- /container -->
         </div>
