changed the header text

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,9 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Hi, there!</h1>
-                        <p class="intro-text">Welcome to my portfolio! I hope you like it. Send me a <a href="#contact">message</a> and tell me what you think!</p>
+                        <p class="intro-text">
+                          Scroll down to know me more <i class="fa fa-rocket"></i>
+                        </p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
