--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,7 +7,7 @@
                   data-toggle="tooltip" title="That's me :)"/>
                 </a>
                 <h2>What I do</h2>
-                <p>I study Electrical Engineering in <a href="https://en.wikipedia.org/wiki/Faculty_of_Engineering,_Alexandria_University">Alexandria University, EG</a>. But mainly I'm interested in web development and I'm working on becoming a full-stack JavaScript web developer;
+                <p class="about-text">I study Electrical Engineering in <a href="https://en.wikipedia.org/wiki/Faculty_of_Engineering,_Alexandria_University">Alexandria University, EG</a>. But mainly I'm interested in web development and I'm working on becoming a full-stack JavaScript web developer;
                   by enrolling in <a data-toggle="modal" data-target="#courseraModal">Coursera Specializations</a>, working on <a href="https://www.freelancer.com/u/amrsekilly.html">real life projects</a> as a
                   freelancer, building projects on <a href="http://www.freecodecamp.com/amrme">Free Code Camp</a>, and <a href="https://twitter.com/BrianLMayers/status/692068129497862144">peer programming</a> with friends from all over the world!
                   <br>
