changed contact info

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,8 +3,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact</h2>
-                <p>Please send me a direct mail, or connect with me on any of the social networks down there!</p>
-                <p><a href="mailto:{{ site.email }}">{{ site.email }}</a>
+                <p class="about-text">Please send me a <a href="mailto:{{ site.email }}?Subject=Website%20mail" target="_top">direct mail <i class="fa fa-paper-plane"></i></a>, or connect with me on any of the social networks down there!</p>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     {% for network in site.social %}
