--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -141,7 +141,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(/img/bg.png) no-repeat bottom center scroll;
+    background: url(/img/bg.jpg) no-repeat bottom center scroll;
     background-color: {{ site.color.primary-dark }};
     -webkit-background-size: cover;
     -moz-background-size: cover;
