edited the footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
     <!-- Footer -->
     <footer>
-        <div class="container text-center">
-            <p style="font-size:0.7em;">Copyright &copy; {{ site.footer }} 20{{ site.time | date: '%y' }}</p>
+        <div class="container text-left">
+            <p style="font-size:0.8em;">&copy; 20{{ site.time | date: '%y' }} {{ site.footer }}</p>
         </div>
     </footer>
