--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -148,6 +148,16 @@ a:focus {
     background-size: cover;
     -o-background-size: cover;
 }
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-image: url(/img/pattern.png);
+    opacity: 0.6;
+    background-repeat: repeat;
+}
 
 .intro .intro-body {
     display: table-cell;
