changed header's title

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,8 +7,9 @@
                   <div class="overlay"></div>
                   <!-- text over header -->
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Hi, there!</h1>
+                        <h1>Jr. Front-end Web Developer</h1>
                         <p class="intro-text">
+                          I Design & Develop Web Pages and Web Apps<br>
                           Scroll down to know me more <i class="fa fa-rocket"></i>
                         </p>
                         <a href="#about" class="btn btn-circle page-scroll">
