--- a/css/main.scss
+++ b/css/main.scss
@@ -1,10 +1,9 @@
-/*!
-  got the basics from
-   * Start Bootstrap - Grayscale Bootstrap Theme (http://startbootstrap.com)
-   * Code licensed under the Apache License v2.0.
-   * For details, see http://www.apache.org/licenses/LICENSE-2.0.
+---
+---
 
-   edited by Amr Elsekilly
+
+/*!
+  The main styles for the website
  */
 
 body {
@@ -228,7 +227,7 @@ a:focus {
 }
 
 @-webkit-keyframes pulse {
-    0 {
+    0% {
         -webkit-transform: scale(1);
         transform: scale(1);
     }
@@ -245,7 +244,7 @@ a:focus {
 }
 
 @-moz-keyframes pulse {
-    0 {
+    0% {
         -moz-transform: scale(1);
         transform: scale(1);
     }
