--- a/css/main.scss
+++ b/css/main.scss
@@ -82,7 +82,7 @@ a:focus {
 .navbar-custom .navbar-brand .navbar-toggle {
     padding: 4px 6px;
     font-size: 16px;
-    color: #fff;
+    color: white;
 }
 
 .navbar-custom .navbar-brand .navbar-toggle:focus,
@@ -91,7 +91,9 @@ a:focus {
 }
 
 .navbar-custom a {
-    color: #fff;
+    color: white;
+    font-weight: bold;
+    text-align: center;
 }
 
 .navbar-custom .nav li.active {
@@ -118,6 +120,7 @@ a:focus {
         border-bottom: 0;
         letter-spacing: 1px;
         background: 0 0;
+        color: white;
         -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
         -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
         transition: background .5s ease-in-out,padding .5s ease-in-out;
@@ -126,10 +129,17 @@ a:focus {
     .top-nav-collapse {
         padding: 0;
         background-color: {{ site.color.primary-dark }};
+        a {
+          color: white;
+        }
     }
 
     .navbar-custom.top-nav-collapse {
         border-bottom: 1px solid rgba(255,255,255,.3);
+    }
+    .navbar-custom a {
+        color: black;
+        font-weight: bold;
     }
 }
 
@@ -139,9 +149,10 @@ a:focus {
     height: auto;
     padding: 100px 0;
     text-align: center;
-    color: #fff;
-    background: url(/img/bg.jpg) no-repeat bottom center scroll;
-    background-color: {{ site.color.primary-dark }};
+    color: black;
+    // background: url(/img/bg.jpg) no-repeat bottom center scroll;
+    background-color: white;
+    // background-color: {{ site.color.primary-dark }};
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -154,7 +165,7 @@ a:focus {
     bottom: 0;
     right: 0;
     background-image: url(/img/pattern.png);
-    opacity: 0.4;
+    opacity: 0.1;
     background-repeat: repeat;
 }
 
@@ -191,10 +202,10 @@ a:focus {
     height: 70px;
     margin-top: 15px;
     padding: 7px 16px;
-    border: 2px solid #fff;
+    border: 2px solid black;
     border-radius: 35px;
     font-size: 40px;
-    color: #fff;
+    color: black;
     background: 0 0;
     -webkit-transition: background .3s ease-in-out;
     -moz-transition: background .3s ease-in-out;
@@ -204,7 +215,7 @@ a:focus {
 .btn-circle:hover,
 .btn-circle:focus {
     outline: 0;
-    color: #fff;
+    color: black;
     background: rgba(255,255,255,.1);
 }
 
