changed the button's animation

--- a/css/main.scss
+++ b/css/main.scss
@@ -220,55 +220,57 @@ a:focus {
 }
 
 .btn-circle i.animated {
+  -webkit-animation-name: pulse;
+  -moz-animation-name: pulse;
+  -webkit-animation-duration: 1.5s;
+  -moz-animation-duration: 1.5s;
+  -webkit-animation-iteration-count: infinite;
+  -moz-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+  -moz-animation-timing-function: linear;
+}
+
+.btn-circle:hover i.animated {
     -webkit-transition-property: -webkit-transform;
     -webkit-transition-duration: 1s;
     -moz-transition-property: -moz-transform;
     -moz-transition-duration: 1s;
-}
-
-.btn-circle:hover i.animated {
-    -webkit-animation-name: pulse;
-    -moz-animation-name: pulse;
-    -webkit-animation-duration: 1.5s;
-    -moz-animation-duration: 1.5s;
-    -webkit-animation-iteration-count: infinite;
-    -moz-animation-iteration-count: infinite;
-    -webkit-animation-timing-function: linear;
-    -moz-animation-timing-function: linear;
+    -webkit-animation-iteration-count: 0;
+    -moz-animation-iteration-count: 0;
 }
 
 @-webkit-keyframes pulse {
     0% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
+        -webkit-transform: translateY(0px);
+        transform: translateY(0px);
     }
 
     50% {
-        -webkit-transform: scale(1.2);
-        transform: scale(1.2);
+        -webkit-transform: translateY(5px);
+        transform: translateY(5px);
     }
 
     100% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
+        -webkit-transform: translateY(0px);
+        transform: translateY(0px);
     }
 }
 
 @-moz-keyframes pulse {
-    0% {
-        -moz-transform: scale(1);
-        transform: scale(1);
-    }
+  0% {
+      -webkit-transform: translateY(0px);
+      transform: translateY(0px);
+  }
 
-    50% {
-        -moz-transform: scale(1.2);
-        transform: scale(1.2);
-    }
+  50% {
+      -webkit-transform: translateY(5px);
+      transform: translateY(5px);
+  }
 
-    100% {
-        -moz-transform: scale(1);
-        transform: scale(1);
-    }
+  100% {
+      -webkit-transform: translateY(0px);
+      transform: translateY(0px);
+  }
 }
 
 .content-section {
