--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,8 +9,7 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h1>Jr. Front-end Web Developer</h1>
                         <p class="intro-text">
-                          I Design & Develop Web Pages and Web Apps<br>
-                          Scroll down to know me more <i class="fa fa-rocket"></i>
+                          I Design & Develop Responsive Web Pages and Apps!
                         </p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
