--- a/css/main.scss
+++ b/css/main.scss
@@ -134,12 +134,16 @@ a:focus {
         }
     }
 
-    .navbar-custom.top-nav-collapse {
-        border-bottom: 1px solid rgba(255,255,255,.3);
-    }
     .navbar-custom a {
         color: black;
         font-weight: bold;
+    }
+
+    .navbar-custom.top-nav-collapse {
+        border-bottom: 2px solid white;
+        a {
+          color: white;
+        }
     }
 }
 
