--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -2,7 +2,7 @@
     <section id="portfolio" class="content-section text-center">
         <div>
             <div class="container">
-                <div class="col-lg-12 new-grids" >
+                <!-- <div class="col-lg-12 new-grids" >
                     <h2>My Work</h2>
                     <div>
                       <div class="col-md-6 new-grid1">
@@ -170,7 +170,8 @@
                       <div class="clearfix"></div>
                     </div>
 
-                </div> <!-- / all portfolio items -->
+                </div> -->
+                <!-- / all portfolio items --> 
             </div> <!-- /container -->
         </div>
     </section>
