--- a/css/main.scss
+++ b/css/main.scss
@@ -387,6 +387,12 @@ footer {
   background-color: fade-in(white, 0.9);
   color: black;
   margin-top: 30px;
+  a {
+    color: black;
+    &:hover, &:active, &:focus {
+      color: #11505d;
+    }
+  }
   p {
       margin: 0;
       padding: 0;
