added hireme Section

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,6 +24,9 @@
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#hire">Hire</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
