--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,177 +1,181 @@
-    <!-- Download Section -->
+    <!-- My Portfolio -->
     <section id="portfolio" class="content-section text-center">
         <div>
             <div class="container">
-                <!-- <div class="col-lg-12 new-grids" >
-                    <h2>My Work</h2>
-                    <div>
-                      <div class="col-md-6 new-grid1">
-                        <h5 style="color:black;">12|15 <span class="flag-icon flag-icon-eg" data-toggle="tooltip" title="Egypt"></span></h5>
-                        <h4><a href="http://aquaphoton.net/">AquaPhoton's Responsive Website</a></h4>
-                        <p>I created a tamplating system for the CM using <a href="http://handlebarsjs.com">Handlebars.js</a>.</p>
-                        <p>
-                          Responsiveness was achieved by using <a href="http://getbootstrap.com/">Bootstrap</a>.
-                        </p>
-                        <a href="http://aquaphoton.net/" target="_blank" class="btn btn-xs btn-info"><i class="fa fa-link"></i></a>
-                        <a href="https://github.com/amrme/aquaphoton" target="_blank" class="btn btn-xs btn-primary"><i class="fa fa-github"></i></a>
-                        <a href="https://eg.linkedin.com/in/amrsekilly#project-1630801385" target="_blank" class="btn btn-xs btn-success"><i class="fa fa-info"></i></a>
-                      </div>
-                      <div class="col-md-6 new-grid">
-                            <a  class="mask">
-                      <img src="img/aquaphoton.net1.png" class="img-responsive zoom-img" alt=""></a>
-                      </div>
-                      <div class="clearfix"></div>
-                    </div>
 
-                    <div>
-                      <div class="col-md-6 new-grid">
-                            <a class="mask">
-                      <img src="img/android.png" class="img-responsive zoom-img" alt=""></a>
-                      </div>
-                      <div class="col-md-6 new-grid1">
-                        <h5 style="color:black;">02|16 <span class="flag-icon flag-icon-bq" data-toggle="tooltip" title="Netherlands"></span></h5>
-                        <h4><a href="https://www.freelancer.com/u/amrsekilly.html">Barcode Scanner - Hybrid Mobile App</a></h4>
-                        <p>
-                          I created the front-end of the App for a client on <a href="http://freelancer.com">Freelancer.com</a>.
-                        </p>
-                        <p>
-                          Responsiveness was achieved by using <a href="http://getbootstrap.com/">Bootstrap</a>.
-                        </p>
-                        <a href="https://www.freelancer.com/u/amrsekilly.html" target="_blank" class="btn btn-xs btn-success"> <i class="fa fa-info"></i> </a>
-                      </div>
-                      <div class="clearfix"></div>
-                    </div>
-
-                    <div>
-
-                      <div class="col-md-6 new-grid1">
-                        <h5 style="color:black;">02|16 <span class="flag-icon flag-icon-us" data-toggle="tooltip" title="USA"></span></h5>
-                        <h4><a href="https://www.freelancer.com/u/amrsekilly.html">Hoverboards Responsive Website</a></h4>
-                        <p>
-                          I edited the front-end of the App for a client on <a href="http://freelancer.com">Freelancer.com</a>.
-                        </p>
-                        <p>
-                          Responsiveness was achieved by using <a href="http://getskeleton.com/">Skeleton</a>.
-                        </p>
-                        <a href="https://www.freelancer.com/u/amrsekilly.html" target="_blank" class="btn btn-xs btn-success"> <i class="fa fa-info"></i> </a>
-                      </div>
-
-                      <div class="col-md-6 new-grid">
-                            <a class="mask">
-                      <img src="img/hoverboards.png" class="img-responsive zoom-img" alt=""></a>
-                      </div>
-
-
-                      <div class="clearfix"></div>
-                    </div>
-
-                    <div>
-                      <div class="col-md-6 new-grid">
-                            <a class="mask">
-                      <img src="img/india.png" class="img-responsive zoom-img" alt=""></a>
-                      </div>
-                      <div class="col-md-6 new-grid1">
-                        <h5 style="color:black;">01|16 <span class="flag-icon flag-icon-in" data-toggle="tooltip" title="India"></span></h5>
-                        <h4><a href="https://www.freelancer.com/u/amrsekilly.html">Responsive HTML5 Website</a></h4>
-                        <p>
-                          I created the front-end of the website for a client on <a href="http://freelancer.com">Freelancer.com</a>.
-                        </p>
-                        <p>
-                          We had an <a href="https://en.wikipedia.org/wiki/Non-disclosure_agreement">NDA</a> taht's why I can't release any info about it. But I can request that from the client if you are interested to know.
-                        </p>
-                        <p>
-                          Responsiveness was achieved by using <a href="http://getbootstrap.com/">Bootstrap</a>.
-                        </p>
-                        <a href="https://www.freelancer.com/u/amrsekilly.html" target="_blank" class="btn btn-xs btn-success"> <i class="fa fa-info"></i> </a>
-                      </div>
-                      <div class="clearfix"></div>
-                    </div>
-
-                    <div>
-                      <div class="col-md-6 new-grid1">
-                        <h5 style="color:black;">2015 - 2017 <i class="fa fa-globe"></i></h5>
-                        <h4><a href="http://www.freecodecamp.com/amrme">Free Code Camp's Algorithms</a></h4>
-                        <p>
-                          All of the algorithms are solved in JavaScript.
-                        </p>
-                        <p>
-                          I used to paste all my answers into <a href="https://gist.github.com/amrme">Gist</a>.
-                        </p>
-                        <a href="https://gist.github.com/amrme" target="_blank" class="btn btn-xs btn-success"> <i class="fa fa-info"></i> </a>
-                      </div>
-
-                      <div class="col-md-6 new-grid">
-                            <a class="mask">
-                      <img src="img/fcc.png" class="img-responsive zoom-img" alt=""></a>
-                      </div>
-
-
-                      <div class="clearfix"></div>
-                    </div>
-
-                    <div>
-
-                      <div class="col-md-6 new-grid">
-                            <a class="mask">
-                      <img src="img/calculator.png" class="img-responsive zoom-img" alt=""></a>
-                      </div>
-
-
-                      <div class="col-md-6 new-grid1">
-                        <h5 style="color:black;">01|16 <i class="fa fa-globe"></i></h5>
-                        <h4><a href="http://amrsekilly.com/calculator/">Basic Online Calculator</a></h4>
-                        <p>
-                          I used <a href="http://jade-lang.com/">Jade</a> as an HTML preprocessor.
-                        </p>
-                        <p>
-                          <a href="http://sass-lang.com/">Sass</a> was used to write the styles.
-                        </p>
-                        <p>
-                          The app was written in JavaScript.
-                        </p>
-                        <p>
-                          It was completed as part of freeCodeCamp's front-end program.
-                        </p>
-                        <a href="http://amrsekilly.com/calculator/" target="_blank" class="btn btn-xs btn-info"><i class="fa fa-link"></i></a>
-                        <a href="https://github.com/amrme/calculator" target="_blank" class="btn btn-xs btn-primary"><i class="fa fa-github"></i></a>
-                        <a href="https://twitter.com/amrsekilly/status/688106746632486912" target="_blank" class="btn btn-xs btn-success"><i class="fa fa-info"></i></a>
-                      </div>
-
-                      <div class="clearfix"></div>
-                    </div>
-
-                    <div>
-
-                      <div class="col-md-6 new-grid1">
-                        <h5 style="color:black;">02|16 <i class="fa fa-globe"></i></h5>
-                        <h4><a href="http://amrsekilly.com/camperNews/">Camper News App</a></h4>
-                        <p>
-                          I used FreeCodeCamp's latest news <a href="http://www.freecodecamp.com/news/hot">API</a>.
-                        </p>
-                        <p>
-                          I used <a href="http://jade-lang.com/">Jade</a> as an HTML preprocessor.
-                        </p>
-                        <p>
-                          <a href="http://sass-lang.com/">Sass</a> was used to write the styles.
-                        </p>
-                        <p>
-                          The app was written in JavaScript.
-                        </p>
-                        <a href="http://amrsekilly.com/camperNews/" target="_blank" class="btn btn-xs btn-info"><i class="fa fa-link"></i></a>
-                        <a href="https://github.com/amrme/camperNews" target="_blank" class="btn btn-xs btn-primary"><i class="fa fa-github"></i></a>
-                        <a href="https://twitter.com/amrsekilly/status/694425120757190656" target="_blank" class="btn btn-xs btn-success"><i class="fa fa-info"></i></a>
-                      </div>
-
-                      <div class="col-md-6 new-grid">
-                            <a class="mask">
-                      <img src="img/camper.png" class="img-responsive zoom-img" alt=""></a>
-                      </div>
-
-                      <div class="clearfix"></div>
-                    </div>
-
-                </div> -->
-                <!-- / all portfolio items --> 
             </div> <!-- /container -->
         </div>
     </section>
+
+
+
+    <!-- <div class="col-lg-12 new-grids" >
+        <h2>My Work</h2>
+        <div>
+          <div class="col-md-6 new-grid1">
+            <h5 style="color:black;">12|15 <span class="flag-icon flag-icon-eg" data-toggle="tooltip" title="Egypt"></span></h5>
+            <h4><a href="http://aquaphoton.net/">AquaPhoton's Responsive Website</a></h4>
+            <p>I created a tamplating system for the CM using <a href="http://handlebarsjs.com">Handlebars.js</a>.</p>
+            <p>
+              Responsiveness was achieved by using <a href="http://getbootstrap.com/">Bootstrap</a>.
+            </p>
+            <a href="http://aquaphoton.net/" target="_blank" class="btn btn-xs btn-info"><i class="fa fa-link"></i></a>
+            <a href="https://github.com/amrme/aquaphoton" target="_blank" class="btn btn-xs btn-primary"><i class="fa fa-github"></i></a>
+            <a href="https://eg.linkedin.com/in/amrsekilly#project-1630801385" target="_blank" class="btn btn-xs btn-success"><i class="fa fa-info"></i></a>
+          </div>
+          <div class="col-md-6 new-grid">
+                <a  class="mask">
+          <img src="img/aquaphoton.net1.png" class="img-responsive zoom-img" alt=""></a>
+          </div>
+          <div class="clearfix"></div>
+        </div>
+
+        <div>
+          <div class="col-md-6 new-grid">
+                <a class="mask">
+          <img src="img/android.png" class="img-responsive zoom-img" alt=""></a>
+          </div>
+          <div class="col-md-6 new-grid1">
+            <h5 style="color:black;">02|16 <span class="flag-icon flag-icon-bq" data-toggle="tooltip" title="Netherlands"></span></h5>
+            <h4><a href="https://www.freelancer.com/u/amrsekilly.html">Barcode Scanner - Hybrid Mobile App</a></h4>
+            <p>
+              I created the front-end of the App for a client on <a href="http://freelancer.com">Freelancer.com</a>.
+            </p>
+            <p>
+              Responsiveness was achieved by using <a href="http://getbootstrap.com/">Bootstrap</a>.
+            </p>
+            <a href="https://www.freelancer.com/u/amrsekilly.html" target="_blank" class="btn btn-xs btn-success"> <i class="fa fa-info"></i> </a>
+          </div>
+          <div class="clearfix"></div>
+        </div>
+
+        <div>
+
+          <div class="col-md-6 new-grid1">
+            <h5 style="color:black;">02|16 <span class="flag-icon flag-icon-us" data-toggle="tooltip" title="USA"></span></h5>
+            <h4><a href="https://www.freelancer.com/u/amrsekilly.html">Hoverboards Responsive Website</a></h4>
+            <p>
+              I edited the front-end of the App for a client on <a href="http://freelancer.com">Freelancer.com</a>.
+            </p>
+            <p>
+              Responsiveness was achieved by using <a href="http://getskeleton.com/">Skeleton</a>.
+            </p>
+            <a href="https://www.freelancer.com/u/amrsekilly.html" target="_blank" class="btn btn-xs btn-success"> <i class="fa fa-info"></i> </a>
+          </div>
+
+          <div class="col-md-6 new-grid">
+                <a class="mask">
+          <img src="img/hoverboards.png" class="img-responsive zoom-img" alt=""></a>
+          </div>
+
+
+          <div class="clearfix"></div>
+        </div>
+
+        <div>
+          <div class="col-md-6 new-grid">
+                <a class="mask">
+          <img src="img/india.png" class="img-responsive zoom-img" alt=""></a>
+          </div>
+          <div class="col-md-6 new-grid1">
+            <h5 style="color:black;">01|16 <span class="flag-icon flag-icon-in" data-toggle="tooltip" title="India"></span></h5>
+            <h4><a href="https://www.freelancer.com/u/amrsekilly.html">Responsive HTML5 Website</a></h4>
+            <p>
+              I created the front-end of the website for a client on <a href="http://freelancer.com">Freelancer.com</a>.
+            </p>
+            <p>
+              We had an <a href="https://en.wikipedia.org/wiki/Non-disclosure_agreement">NDA</a> taht's why I can't release any info about it. But I can request that from the client if you are interested to know.
+            </p>
+            <p>
+              Responsiveness was achieved by using <a href="http://getbootstrap.com/">Bootstrap</a>.
+            </p>
+            <a href="https://www.freelancer.com/u/amrsekilly.html" target="_blank" class="btn btn-xs btn-success"> <i class="fa fa-info"></i> </a>
+          </div>
+          <div class="clearfix"></div>
+        </div>
+
+        <div>
+          <div class="col-md-6 new-grid1">
+            <h5 style="color:black;">2015 - 2017 <i class="fa fa-globe"></i></h5>
+            <h4><a href="http://www.freecodecamp.com/amrme">Free Code Camp's Algorithms</a></h4>
+            <p>
+              All of the algorithms are solved in JavaScript.
+            </p>
+            <p>
+              I used to paste all my answers into <a href="https://gist.github.com/amrme">Gist</a>.
+            </p>
+            <a href="https://gist.github.com/amrme" target="_blank" class="btn btn-xs btn-success"> <i class="fa fa-info"></i> </a>
+          </div>
+
+          <div class="col-md-6 new-grid">
+                <a class="mask">
+          <img src="img/fcc.png" class="img-responsive zoom-img" alt=""></a>
+          </div>
+
+
+          <div class="clearfix"></div>
+        </div>
+
+        <div>
+
+          <div class="col-md-6 new-grid">
+                <a class="mask">
+          <img src="img/calculator.png" class="img-responsive zoom-img" alt=""></a>
+          </div>
+
+
+          <div class="col-md-6 new-grid1">
+            <h5 style="color:black;">01|16 <i class="fa fa-globe"></i></h5>
+            <h4><a href="http://amrsekilly.com/calculator/">Basic Online Calculator</a></h4>
+            <p>
+              I used <a href="http://jade-lang.com/">Jade</a> as an HTML preprocessor.
+            </p>
+            <p>
+              <a href="http://sass-lang.com/">Sass</a> was used to write the styles.
+            </p>
+            <p>
+              The app was written in JavaScript.
+            </p>
+            <p>
+              It was completed as part of freeCodeCamp's front-end program.
+            </p>
+            <a href="http://amrsekilly.com/calculator/" target="_blank" class="btn btn-xs btn-info"><i class="fa fa-link"></i></a>
+            <a href="https://github.com/amrme/calculator" target="_blank" class="btn btn-xs btn-primary"><i class="fa fa-github"></i></a>
+            <a href="https://twitter.com/amrsekilly/status/688106746632486912" target="_blank" class="btn btn-xs btn-success"><i class="fa fa-info"></i></a>
+          </div>
+
+          <div class="clearfix"></div>
+        </div>
+
+        <div>
+
+          <div class="col-md-6 new-grid1">
+            <h5 style="color:black;">02|16 <i class="fa fa-globe"></i></h5>
+            <h4><a href="http://amrsekilly.com/camperNews/">Camper News App</a></h4>
+            <p>
+              I used FreeCodeCamp's latest news <a href="http://www.freecodecamp.com/news/hot">API</a>.
+            </p>
+            <p>
+              I used <a href="http://jade-lang.com/">Jade</a> as an HTML preprocessor.
+            </p>
+            <p>
+              <a href="http://sass-lang.com/">Sass</a> was used to write the styles.
+            </p>
+            <p>
+              The app was written in JavaScript.
+            </p>
+            <a href="http://amrsekilly.com/camperNews/" target="_blank" class="btn btn-xs btn-info"><i class="fa fa-link"></i></a>
+            <a href="https://github.com/amrme/camperNews" target="_blank" class="btn btn-xs btn-primary"><i class="fa fa-github"></i></a>
+            <a href="https://twitter.com/amrsekilly/status/694425120757190656" target="_blank" class="btn btn-xs btn-success"><i class="fa fa-info"></i></a>
+          </div>
+
+          <div class="col-md-6 new-grid">
+                <a class="mask">
+          <img src="img/camper.png" class="img-responsive zoom-img" alt=""></a>
+          </div>
+
+          <div class="clearfix"></div>
+        </div>
+
+    </div> -->
+    <!-- / all portfolio items -->
