--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     {% include header.html %}
     {% include about.html %}
     {% include portfolio.html %}
+    {% include hire.html %}
     {% include contact.html %}
     {% include footer.html %}
     {% include js.html %}
