--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -2,7 +2,11 @@
     <section id="portfolio" class="content-section text-center">
         <div>
             <div class="container">
-
+              <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                  <hr>
+                </div>
+              </div>
             </div> <!-- /container -->
         </div>
     </section>
