fixed the line height for the paragraphs

--- a/css/main.scss
+++ b/css/main.scss
@@ -439,6 +439,7 @@ img::-moz-selection {
 // about section
 .about-text {
   text-align: justify;
+  line-height: 40px;
   a {
     border-bottom: 1px solid #fff;
     padding-bottom: 3px;
