edited the contact text

--- a/css/main.scss
+++ b/css/main.scss
@@ -452,6 +452,14 @@ img::-moz-selection {
   }
 }
 
+.contact-text {
+  text-align: justify;
+  a {
+    border-bottom: 1px solid #fff;
+    padding-bottom: 3px;
+  }
+}
+
 .modal-body > a {
   color: black;
   border-bottom: 1px solid #000;
