--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact</h2>
-                <p class="about-text">Please send me a <a href="mailto:{{ site.email }}?Subject=Website%20mail" target="_top">an E-mail <i class="fa fa-paper-plane"></i></a>, or connect with me on any of the social networks down there!</p>
+                <p class="contact-text">Please send me a <a href="mailto:{{ site.email }}?Subject=Website%20mail" target="_top">an E-mail <i class="fa fa-paper-plane"></i></a>, or connect with me on any of the following networks</p>
                 <ul class="list-inline banner-social-buttons">
                     {% for network in site.social %}
                     <li>
