changed the structure of the hireme section

--- a/css/main.scss
+++ b/css/main.scss
@@ -493,3 +493,9 @@ hr {
   border: 2px solid;
   border-color: fade-out(white, 0.8);
 }
+
+// style the media object in the hireme section
+.media-p {
+  margin-top: 30px;
+  font-size: 1.5em;
+}
