--- a/_includes/hire.html
+++ b/_includes/hire.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
           <div class="media">
-            <div class="media-left">
+            <div class="media-left media-middle">
               <div class='fln-hireme media-object' data-username='amrsekilly' data-style='plain_footer' data-type='badge' data-bg='' data-theme='' ></div>
             </div>
             <div class="media-body">
@@ -18,9 +18,12 @@
     </div>
 </section>
 
-<script type='text/javascript'>(function(d) {
+<!-- get my Freelancer.com info -->
+<script type='text/javascript'>
+  (function(d) {
     var po = d.createElement('script');
     po.type = 'text/javascript'; po.async = true; po.src = '//static.flnwdgt.com/build/js/hireme-sdk.js';
     var s = d.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(po, s);
-})(document);</script>
+  })(document);
+</script>
