--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -7,7 +7,7 @@
                 <ul class="list-inline banner-social-buttons">
                     {% for network in site.social %}
                     <li>
-                        <a href="{{ network.url }}" class="btn btn-default btn-lg"><i class="fa fa-{{ network.title }} fa-fw"></i></a>
+                        <a href="{{ network.url }}" class="btn btn-default btn-lg"><i class="fa fa-{{ network.title }} fa-fw"></i> <span class="network-name hidden-sm hidden-md hidden-lg">{{ network.title }}</span></a>
                     </li>
                     {% endfor %}
                 </ul>
