edited the hireme section

--- a/_includes/hire.html
+++ b/_includes/hire.html
@@ -1,19 +1,10 @@
 <!-- Hire me Section -->
 <section id="hire" class="container content-section">
-    <div class="row">
+    <div class="row text-center">
         <div class="col-lg-8 col-lg-offset-2">
-          <div class="media">
-            <div class="media-left media-middle">
-              <div class='fln-hireme media-object' data-username='amrsekilly' data-style='plain_footer' data-type='badge' data-bg='' data-theme='' ></div>
-            </div>
-            <div class="media-body">
-              <h2 class="media-heading">Let's Work Together!</h2>
-              <p class="media-p">
-                I'd like to work with you!!!!!!
-              </p>
-            </div>
-          </div>
-          <hr>
+            <h2>Let's Work Together!</h2>
+            <div class='fln-hireme' data-username='amrsekilly' data-style='plain_footer' data-type='badge' data-bg='' data-theme='' ></div>
+            <hr>
         </div>
     </div>
 </section>
