--- a/css/main.scss
+++ b/css/main.scss
@@ -496,3 +496,14 @@ hr {
   margin-top: 30px;
   font-size: 1.5em;
 }
+
+
+// style the skill logos
+.skill-logo {
+  max-height: 100px;
+  padding-top: 20px;
+  padding-bottom: 30px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
