--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -3,27 +3,56 @@
         <div>
             <div class="container">
               <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
-                  <h3>My Work</h3>
-                  <div class="col-xs-12">
-                    <!--  image goes here-->
-                    <div class="col-xs-4">
-                      <img src="img/android.png" class="img-responsive portfolio-item-image" alt="" />
+                <h3>My Work</h3>
+                  <div class="col-xs-12 portfolio-row">
+                    <div class="col-md-4 col-sm-6 portfolio-item">
+                      <img src="img/discoverly.png" class="img-responsive portfolio-item-image" alt="discoverly app" />
+                      <div class="portfolio-item-text">
+                        <h4>
+                          <span class="flag-icon flag-icon-ca" data-toggle="tooltip" title="Canada"></span>
+                          Discoverly App
+                        </h4>
+                        <hr>
+                        <p>
+                          Angular.js, D3.js, RESTful, HTML5, Bootstrap, Less, Gulp, Git, Github, Slack
+                        </p>
+                        <a href="https://www.freelancer.com/u/amrsekilly.html" class="btn btn-success">More</a>
+                      </div>
                     </div>
-                    <!-- project's body goes here -->
-                    <div class="col-xs-8">
-                      <p class="portfolio-item-text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                      </p>
+                    <div class="col-md-4 col-sm-6 portfolio-item">
+                      <img src="img/barcode.png" class="img-responsive portfolio-item-image" alt="barcode scanner" />
+                      <div class="portfolio-item-text">
+                        <h4>
+                          <span class="flag-icon flag-icon-bq" data-toggle="tooltip" title="Netherlands"></span>
+                          Barcode Scanner App
+                        </h4>
+                        <hr>
+                        <p>
+                          HTML5, Bootstrap, Less, CodeKit
+                        </p>
+                        <a href="https://www.freelancer.com/u/amrsekilly.html" class="btn btn-success">More</a>
+                      </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6 portfolio-item">
+                      <img src="img/ap.png" class="img-responsive portfolio-item-image" alt="AquaPhoton Co. Website" />
+                      <div class="portfolio-item-text">
+                        <h4>
+                          <span class="flag-icon flag-icon-eg" data-toggle="tooltip" title="Egypt"></span>
+                          Aquaphoton Co.
+                        </h4>
+                        <hr>
+                        <p>
+                          HTML5, Handlebars.js, Bootstrap, Less, Grunt, Git, Github
+                        </p>
+                        <a href="https://github.com/aquaphoton/aquaphoton-website" class="btn btn-success">More</a>
+                      </div>
                     </div>
                   </div>
                   <hr>
-                </div>
               </div>
             </div> <!-- /container -->
         </div>
     </section>
-
 
 
     <!-- <div class="col-lg-12 new-grids" >
