edited the about me section

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,14 +2,20 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <a href="https://keybase.io/amrsekilly">
-                  <img src="img/amr.jpg" class="img-rounded" style="max-width:200px; margin-bottom:20px;" alt="Amr Mohamed Elsayed Abdelkhalik Elsekilly"
-                  data-toggle="tooltip" title="That's me :)"/>
-                </a>
+              <!-- youtube intro video -->
+              <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12 video">
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="//www.youtube.com/embed/bSyBkTGlub4?showinfo=0" ></iframe>
+                </div>
+                <hr class="sm-hr">
+              </div> <!-- / youtube video -->
+              <div class="col-xs-12">
                 <h2>What I do</h2>
                 <p class="about-text">I study Engineering in <a href="https://en.wikipedia.org/wiki/Faculty_of_Engineering,_Alexandria_University">Alexandria University, EG</a>. However, I'm interested in web development and I'm working on becoming a full-stack JavaScript web developer;
                   by enrolling in <a data-toggle="modal" data-target="#courseraModal">Coursera Specializations</a>, working on <a href="https://www.freelancer.com/u/amrsekilly.html">real life projects</a> as a
                   freelancer, building projects on <a href="http://www.freecodecamp.com/amrme">Free Code Camp</a>, and <a href="https://twitter.com/BrianLMayers/status/692068129497862144">peer programming</a> with friends from all over the world!
+                </p>
+              </div>
                 <hr>
             </div>
         </div>
@@ -32,7 +38,9 @@
           <small>September 14 – October 12</small> (<a target="_blank" href="https://www.coursera.org/account/accomplishments/records/EMNALGEK5R3L">4V24PD3XW632</a>)</li>
           <li><i class="fa fa-check-square-o"></i> Front-End Web UI Frameworks and Tools -
           <small>October 19 – November 23</small> (<a target="_blank" href="https://www.coursera.org/account/accomplishments/records/6P9Q9L5GH9PD">E9YKZM4Y24T9</a>)</li>
-          <li><i class="fa fa-square-o"></i> Front-End JavaScript Frameworks: AngularJS</li>
+          <li><i class="fa fa-check-square-o"></i> Front-End JavaScript Frameworks: AngularJS
+            <small>(March – May) 2016</small> (<a target="_blank" href="https://www.coursera.org/account/accomplishments/records/9C8QWTNG6PR7">2WHFTPGHNQME</a>)</li>
+          </li>
           <li><i class="fa fa-square-o"></i> Multiplatform Mobile App Development with Web Technologies</li>
           <li><i class="fa fa-square-o"></i> Server-side Development with NodeJS</li>
           <li><i class="fa fa-square-o"></i> Full Stack Web Development Specialization Capstone Project</li>
