added the blog tab

--- a/css/main.scss
+++ b/css/main.scss
@@ -156,7 +156,7 @@ a:focus {
     text-align: center;
     color: white;
     background: linear-gradient(to right, #227DC4 -25%, #0e4369 125%);
-    background-image:  linear-gradient(to right, #227DC4 -25%, #0e4369 125%);
+    // background-image:  linear-gradient(to right, #227DC4 -25%, #0e4369 125%);
     background-position-x: initial;
     background-position-y: initial;
     background-size: initial;
