--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
                   <!-- text over header -->
                     <div class="col-md-8 col-md-offset-2">
                       <img src="img/coding.png" class="img-responsive center-block leading-icon" alt="coding icon" />
-                        <h1>Jr. Front-end Web Developer</h1>
+                        <h1 class="job-title">Jr. Front-end Web Developer</h1>
                         <p class="intro-text">
                           I Design & Develop Responsive Web Pages and Apps!
                         </p>
