purged the old page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
     <!-- Footer -->
-    <footer>
+    <!-- <footer>
         <div class="container text-left">
             <p style="font-size:0.8em;">&copy; 20{{ site.time | date: '%y' }} {{ site.footer }}</p>
         </div>
-    </footer>
+    </footer> -->
