--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,8 +5,8 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-briefcase"></i> Amr's Portfolio
+                <a class="navbar-brand page-scroll" href="/">
+                  Amr Elsekilly
                 </a>
             </div>
 
@@ -17,7 +17,7 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <li>
+                    <!-- <li>
                       <a href="#about" class="page-scroll">About</a>
                     </li>
                     <li>
@@ -25,7 +25,7 @@
                     </li>
                     <li>
                       <a href="#contact" class="page-scroll">Contact</a>
-                    </li>
+                    </li> -->
                     <li>
                       <a href="http://zero2dev.com">Blog</a>
                     </li>
