--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,5 +1,5 @@
     <!-- My Portfolio -->
-    <section id="portfolio" class="content-section text-center">
+    <!-- <section id="portfolio" class="content-section text-center">
         <div>
             <div class="container">
               <div class="row">
@@ -50,9 +50,9 @@
                   </div>
                   <hr>
               </div>
-            </div> <!-- /container -->
+            </div>
         </div>
-    </section>
+    </section> -->
 
 
     <!-- <div class="col-lg-12 new-grids" >
