--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,5 +1,5 @@
     <!-- About Section -->
-    <section id="about" class="container content-section text-center">
+    <!-- <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
               <div class="col-xs-12">
@@ -12,4 +12,4 @@
                 <hr>
             </div>
         </div>
-    </section>
+    </section> -->
