--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,34 +11,13 @@
                         <h2 class="job-title">
                           Front-end Web Developer at <a href="http://webee.com.mt/">Webee</a>
                         </h2>
-
-
-                        <!-- add the icons of the skills -->
-                        <div class="col-md-12">
-
-                          <div class="col-xs-2">
-                              <img src="img/angularjs.png" class="img-responsive skill-logo" alt="AngularJS" />
-                          </div>
-
-                          <div class="col-xs-2">
-                              <img src="img/ember.png" class="img-responsive skill-logo" alt="emberjs" />
-                          </div>
-                          <div class="col-xs-2">
-                              <img src="img/html5.png" class="img-responsive skill-logo" alt="html5" />
-                          </div>
-                          <div class="col-xs-2">
-                              <img src="img/js.png" class="img-responsive skill-logo" alt="js" />
-                          </div>
-                          <div class="col-xs-2">
-                              <img src="img/git.png" class="img-responsive skill-logo" alt="git" />
-                          </div>
-                          <div class="col-xs-2">
-                              <img src="img/gulp.png" class="img-responsive skill-logo" alt="gulp" />
-                          </div>
-                        </div>
-                        <a href="#about" class="btn btn-circle page-scroll">
-                            <i class="fa fa-angle-double-down animated"></i>
-                        </a>
+                        <ul class="list-inline banner-social-buttons">
+                            {% for network in site.social %}
+                            <li>
+                                <a href="{{ network.url }}" data-toggle="tooltip" title="{{ network.name }}" class="btn btn-default btn-lg"><i class="fa fa-{{ network.title }} fa-fw"></i> <span class="network-name hidden-sm hidden-md hidden-lg">{{ network.title }}</span></a>
+                            </li>
+                            {% endfor %}
+                        </ul>
                     </div>
                 </div>
             </div>
