added my PGP Key's URL

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,6 +20,11 @@
                         </ul>
                     </div>
                 </div>
+                <div class="row">
+                  <div class="col-xs-12">
+                    <a target="_blank" href="https://keybase.io/amrsekilly"><i class="fa fa-lock" aria-hidden="true"></i> Send me secure messages (PGP)</a>
+                  </div>
+                </div>
             </div>
         </div>
     </header>
