--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,7 +15,7 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                  
+                    <li><a href="{{ site.baseurl }}/blog" class="fa fa-pencil-square-o" aria-hidden="true"> Blog</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
