--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,4 +1,12 @@
 ---
 layout: default
 ---
-{{ content }}
+
+  <!-- Intro Header -->
+  <header class="intro">
+      <div class="intro-body">
+          <div class="container">
+            {{ content }}
+          </div>
+      </div>
+  </header>
