--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,30 +1,24 @@
-    <!-- Intro Header -->
-    <header class="intro">
-        <div class="intro-body">
-            <div class="container">
-                <div class="row">
-                  <!-- overlay -->
-                  <div class="overlay"></div>
-                  <!-- text over header -->
-                    <div class="col-md-8 col-md-offset-2">
-                      <i class="fa fa-code" id="header-badge" aria-hidden="true"></i>
-                        <h2 class="job-title">
-                          Front-end Web Developer at <a href="http://webee.com.mt/">Webee</a>
-                        </h2>
-                        <ul class="list-inline banner-social-buttons">
-                            {% for network in site.social %}
-                            <li>
-                                <a href="{{ network.url }}" data-toggle="tooltip" title="{{ network.name }}" class="btn btn-default btn-block btn-lg"><i class="fa fa-{{ network.title }} fa-fw"></i> <span class="network-name hidden-sm hidden-md hidden-lg">{{ network.name }}</span></a>
-                            </li>
-                            {% endfor %}
-                        </ul>
-                    </div>
-                </div>
-                <div class="row">
-                  <div class="col-xs-12">
-                    <a target="_blank" href="https://keybase.io/amrsekilly"><i class="fa fa-lock" aria-hidden="true"></i> Send me secure messages (PGP)</a>
-                  </div>
-                </div>
-            </div>
-        </div>
-    </header>
+<!-- header area -->
+<div class="row">
+  <!-- overlay -->
+  <div class="overlay"></div>
+  <!-- text over header -->
+    <div class="col-md-8 col-md-offset-2">
+      <i class="fa fa-code" id="header-badge" aria-hidden="true"></i>
+        <h2 class="job-title">
+          Front-end Web Developer at <a href="http://webee.com.mt/">Webee</a>
+        </h2>
+        <ul class="list-inline banner-social-buttons">
+            {% for network in site.social %}
+            <li>
+                <a href="{{ network.url }}" data-toggle="tooltip" title="{{ network.name }}" class="btn btn-default btn-block btn-lg"><i class="fa fa-{{ network.title }} fa-fw"></i> <span class="network-name hidden-sm hidden-md hidden-lg">{{ network.name }}</span></a>
+            </li>
+            {% endfor %}
+        </ul>
+    </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <a target="_blank" href="https://keybase.io/amrsekilly"><i class="fa fa-lock" aria-hidden="true"></i> Send me secure messages (PGP)</a>
+  </div>
+</div>
