added disqus comments

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="{{ "/css/font-awesome/css/font-awesome.min.css" | prepend: site.baseurl }}">
 
     <!-- add my favicon -->
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="{{ site.url }}/img/favicon.ico" type="image/x-icon" />
 
     <script type="text/javascript">
       var host = "amrsekilly.com";
