--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,6 @@
 ---
 layout: page
+comments: true
 ---
 
 <div class="post">
@@ -10,5 +11,20 @@ layout: page
       <hr />
       <p>{{ content }}</p>
     </div>
+
+    {% if page.comments %}
+    <p>Comments:</p>
+      <div id="disqus_thread"></div>
+        <script>
+        var disqus_developer = 1;
+          (function() { // DON'T EDIT BELOW THIS LINE
+          var d = document, s = d.createElement('script');
+          s.src = '//amrsekilly-1.disqus.com/embed.js';
+          s.setAttribute('data-timestamp', +new Date());
+          (d.head || d.body).appendChild(s);
+          })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    {% endif %}
   </div>
 </div>
