--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,8 @@
   <div class="overlay"></div>
   <!-- text over header -->
     <div class="col-md-8 col-md-offset-2">
-      <i class="fa fa-code" id="header-badge" aria-hidden="true"></i>
+      <!-- <i class="fa fa-code" id="header-badge" aria-hidden="true"></i> -->
+      <span id="header-badge">&lt;<span class="skills"></span>&gt;</span>
         <h2 class="job-title">
           Front-end Web Developer at <a href="http://webee.com.mt/">Webee</a>
         </h2>
